--- a/package.json
+++ b/package.json
@@ -33,9 +33,12 @@
     "babel-plugin-transform-vue-jsx": "^3.5.0",
     "babel-preset-env": "^1.3.2",
     "babel-preset-stage-2": "^6.22.0",
+    "bcrypt-nodejs": "^0.0.3",
     "chalk": "^2.0.1",
+    "connect-mongo": "^2.0.1",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.28.0",
+    "express-session": "^1.15.6",
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^1.1.4",
     "friendly-errors-webpack-plugin": "^1.6.1",
@@ -43,6 +46,8 @@
     "mongoose": "^5.0.0-rc1",
     "node-notifier": "^5.1.2",
     "node-sass": "^4.7.2",
+    "nodemailer": "^4.4.1",
+    "nodemailer-smtp-transport": "^2.7.4",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "ora": "^1.2.0",
     "portfinder": "^1.0.13",
