--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "shelljs": "^0.7.6",
     "uglifyjs-webpack-plugin": "^1.1.1",
     "url-loader": "^0.5.8",
+    "v-distpicker": "^1.0.16",
     "vue-lazyload": "^1.1.4",
     "vue-loader": "^13.3.0",
     "vue-style-loader": "^3.0.1",
